fix update swagger
